# COS214_P2

./: .gitignore  Boatman.cpp  Boatman.h  BoatmanFactory.cpp  BoatmanFactory.h  CMakeLists.txt  Caretaker.cpp  Caretaker.h  DemoMain.cpp  Infantry.cpp  Infantry.h  InfantryFactory.cpp  InfantryFactory.h  Memento.cpp  Memento.h  README.md  ShieldBearer.cpp  ShieldBearer.h  ShieldBearerFactory.cpp  ShieldBearerFactory.h  SoldierFactory.cpp  SoldierFactory.h  Soldiers.cpp  Soldiers.h  TestingMain.cpp  main.cpp
